test/tests/stages/18_structures/valid/params_and_returns/simple.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: pair
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: x
            Int: 
          CMemberDeclaration: 
            TIdentifier: y
            Char: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: pair2
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: d
            Double: 
          CMemberDeclaration: 
            TIdentifier: l
            Long: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: double_members
        List[1]: 
          TIdentifier: p
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: retval
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CBinary: 
                          CMultiply: 
                          CDot: 
                            TIdentifier: x
                            CVar: 
                              TIdentifier: p
                              None: 
                            None: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                          None: 
                        None: 
                      CSingleInit: 
                        CBinary: 
                          CMultiply: 
                          CDot: 
                            TIdentifier: y
                            CVar: 
                              TIdentifier: p
                              None: 
                            None: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: pair2
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: retval
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Structure: 
              TIdentifier: pair
              Bool: 0
          Structure: 
            TIdentifier: pair2
            Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arg
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 4
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: pair
                    Bool: 0
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: double_members
                      List[1]: 
                        CVar: 
                          TIdentifier: arg
                          None: 
                      None: 
                    None: 
                  Structure: 
                    TIdentifier: pair2
                    Bool: 0
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  COr: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: d
                      CVar: 
                        TIdentifier: result
                        None: 
                      None: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 2.000000
                      None: 
                    None: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: l
                      CVar: 
                        TIdentifier: result
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 8
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
