test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/static_union_init_wrong_type.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: ptr
            Pointer: 
              SChar: 
          CMemberDeclaration: 
            TIdentifier: d
            Double: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: my_union
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[12]: 
                              TChar: 65
                              TChar: 32
                              TChar: 99
                              TChar: 104
                              TChar: 97
                              TChar: 114
                              TChar: 32
                              TChar: 97
                              TChar: 114
                              TChar: 114
                              TChar: 97
                              TChar: 121
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  CStatic: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
